Praca nad instalką, obecnie aplikacja uruchamia się za pomocą pliku .exe